<resources>
    <string name="app_name">Gym tracker</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="name">Ankush Sharma</string>
    <string name="banner_ad_unit_id">ca-app-pub-3847635009923151/3840487916</string>
    <string name="cover_image">Cover_Image</string>
    <string name="settings_name">Name</string>
    <string name="settings_age">Age</string>
    <string name="settings_height">Height in feet (e.g 5.4)</string>
    <string name="settings_weight">Weight in Kgs (e.g. 60)</string>
    <string name="settings_goal">Days for Goal</string>
    <string name="facebook_app_id">2006314379431470</string>
    <string name="fb_login_protocol_scheme">fb2006314379431470</string>


    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>

    </string-array>

    <string-array name="workout">
        <item>Normal exercise</item>
        <item>Moderate workout</item>
        <item>Intense Gymming</item>
    </string-array>
</resources>
