<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_500">

    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/cancel_dialog"
        android:layout_alignParentRight="true"
        android:padding="5dp"
        android:id="@+id/cancel_img_dialog"

        />
    <ImageView
        android:id="@+id/setting_icon"
        android:layout_width="150dp"
        android:layout_marginTop="20dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/settings_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_icon"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/setting_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/setting_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_age"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/setting_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_height"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/setting_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_weight"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/setting_gender_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="Gender"
                    android:padding="5dp"

                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/setting_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/setting_gender_name">

                </Spinner>
            </RelativeLayout>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/setting_Goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_goal"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/setting_Workout_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="Work out type"
                    android:padding="5dp"

                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/setting_workout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/setting_Workout_type">

                </Spinner>
            </RelativeLayout>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_gravity="center_horizontal"
            android:text="Done"
            android:textColor="#FFF"
            android:id="@+id/setting_done"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:layout_marginBottom="15dp"

            />
    </LinearLayout>


</RelativeLayout>